actualizar contenido de la agenda y mejorar estilos de los componentes

--- a/src/app/agenda-evento-text/agenda-evento-text.component.html
+++ b/src/app/agenda-evento-text/agenda-evento-text.component.html
@@ -1,4 +1,3 @@
-<h3 class="evento-text">EUROPA LEAGUE</h3>
-<p class="agenda-text">30/01 - &nbsp;<b>21:00h</b>&nbsp; | Última jornada de la fase de liga | Multieuropa: &nbsp;<b>M+ L. Campeones 3</b> &nbsp;|
-Consulta dónde ver los partidos en la sección "Agenda deportiva".
+<h3 class="evento-text">COPA DEL REY</h3>
+<p class="agenda-text">25/02 - &nbsp;<b>21:30h</b>&nbsp;<i class="bi bi-arrow-right"></i>&nbsp;Barcelona - Atlético //&nbsp;Canales: La 1 TVE (en abierto) | Movistar Plus+
 </p>
