--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -390,8 +390,7 @@
     flex-wrap: wrap;
   }
 
-  .iframe-container {
-    width: auto;
-    height: auto;
+  .navbar-title h1 {
+    font-size: 17px;
   }
 }
