modificar orden M+ L. Campeones 2

--- a/src/app/agenda-evento-text/agenda-evento-text.component.html
+++ b/src/app/agenda-evento-text/agenda-evento-text.component.html
@@ -1,3 +1,3 @@
-<h3 class="evento-text">COPA DEL REY</h3>
-<p class="agenda-text">25/02 - &nbsp;<b>21:30h</b>&nbsp;<i class="bi bi-arrow-right"></i>&nbsp;Barcelona - Atlético //&nbsp;Canales: La 1 TVE (en abierto) | Movistar Plus+
+<h3 class="evento-text">CHAMPIONS LEAGUE</h3>
+<p class="agenda-text">11/03 - &nbsp;<b>18:45h</b>&nbsp;<i class="bi bi-arrow-right"></i>&nbsp;Barcelona - Atlético //&nbsp;Canales: La 1 TVE (en abierto) | Movistar Plus+
 </p>
