actualizar información de la agenda para la Champions League y agregar componente de evento

--- a/src/app/agenda-evento-text/agenda-evento-text.component.html
+++ b/src/app/agenda-evento-text/agenda-evento-text.component.html
@@ -1,3 +1,6 @@
 <h3 class="evento-text">CHAMPIONS LEAGUE</h3>
-<p class="agenda-text">11/03 - &nbsp;<b>18:45h</b>&nbsp;<i class="bi bi-arrow-right"></i>&nbsp;Barcelona - Atlético //&nbsp;Canales: La 1 TVE (en abierto) | Movistar Plus+
+<p class="agenda-text">12/03 - &nbsp;<b>21:00h</b>&nbsp;<i class="bi bi-arrow-right"></i>&nbsp;Atlético - Real Madrid //&nbsp;Canales:
+    M+ Liga de Campeones (RECOMENDADO OPCIÓN 1) | 
+    Movistar Plus+ |
+    LaLiga TV Bar
 </p>
