--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -112,6 +112,8 @@
     ></a>
   </h4>
 
+  <app-agenda-evento-text></app-agenda-evento-text>
+
   <h3 class="header-enlaces">ENLACES</h3>
 
   <div class="search-container">
