--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 .container {
   background-color: #1e1e1e;
   color: #f5f5f5;
@@ -8,7 +12,7 @@
 
 /* SCROLL TO TOP BUTTON */
 .scroll-to-top {
-  background-color: #007bff;
+  background: linear-gradient(135deg, #007bff, #0056b3);
   color: white;
   border: none;
   padding: 10px 20px;
@@ -20,13 +24,13 @@
 }
 
 .scroll-to-top:hover {
-  background-color: #0056b3;
   transform: translateY(-3px);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
 }
 
 .delete-search-button {
   cursor: pointer;
-  background-color: #ff4d4d;
+  background: linear-gradient(135deg, #ff4d4d, #e60000);
   color: white;
   border: none;
   padding: 10px;
@@ -37,8 +41,8 @@
 }
 
 .delete-search-button:hover {
-  background-color: #e60000;
   transform: scale(1.1);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .links {
@@ -55,7 +59,7 @@
 }
 
 .navbar {
-  background-color: #333;
+  background: linear-gradient(135deg, #333, #444);
   color: white;
   padding: 15px 30px;
   margin-bottom: 1rem;
@@ -63,8 +67,9 @@
   justify-content: space-between;
   align-items: center;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  border-bottom: 2px solid #444;
+  border-bottom: 2px solid #555;
   border-radius: 8px;
+  backdrop-filter: blur(10px);
 }
 
 .navbar-container {
@@ -185,7 +190,7 @@
 
 .footer {
   flex-shrink: 0;
-  background-color: #004d40;
+  background: linear-gradient(135deg, #004d40, #00695c);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -193,6 +198,7 @@
   margin-bottom: 5px;
   padding: 12px;
   border-radius: 8px;
+  backdrop-filter: blur(10px);
 }
 
 .footer-text {
@@ -281,7 +287,7 @@
   text-align: center;
   margin: 5px;
   padding: 10px;
-  border: 1px solid #ccc;
+  border: 0.5px solid #ccc;
   border-radius: 8px;
   background-color: #353333;
   font-size: 19px;
@@ -292,7 +298,7 @@
 }
 
 .acestream-link:hover {
-  transform: scale(1.05);
+  transform: scale(1.04);
   background-color: #444444;
 }
 
