Ajustar texto SnackBar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -163,7 +163,7 @@
           matTooltip="Copiar enlace"
           matTooltipPosition="right"
           class="copy-button"
-          (click)="copyLink(link.url)"
+          (click)="copyLink(link.url, link.title)"
         >
           <i
             class="bi bi-copy"
