--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -357,6 +357,36 @@ html {
   z-index: 10;
 }
 
+.scroll-to-links {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+
+.scroll-to-links-button {
+  background: linear-gradient(135deg, #007bff, #0056b3);
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 50px;
+  cursor: pointer;
+  font-size: 15px;
+  margin: 1rem;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  transition: all 0.3s;
+}
+
+.scroll-to-links-button:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+}
+
+@media (min-width: 854px) {
+  .scroll-to-links {
+    display: none;
+  }
+}
+
 @media (max-width: 600px) {
   .how-to-play-text {
     margin: 0 10px 20px 10px;
