Agregar estilos y separadores a secciones en el componente principal

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,6 +27,7 @@
     </button>
   </div>
   <h3 class="agenda-header">AGENDA DEPORTIVA</h3>
+  <div class="mini-separator"></div>
   <div class="futbol-tv-agendas">
     <div class="iframe-container">
       <div class="spinner-container" *ngIf="loading[0]">
@@ -120,7 +121,7 @@
   </h4>
 
   <h3 class="header-enlaces">ENLACES</h3>
-
+  <div class="mini-separator"></div>
   <div class="search-container">
     <form class="search-form">
       <input
@@ -198,6 +199,7 @@
 
   <div id="contacto" class="contact-form">
     <h3>CONTACTO</h3>
+    <div class="mini-separator"></div>
     <p>
       Si tienes alguna duda, sugerencia o lo que quieras, no dudes en
       contactarme.
@@ -266,6 +268,7 @@
 
   <div class="how-to-play-container">
     <h3 class="how-to-play-header">CÓMO REPRODUCIR ENLACES ACE STREAM</h3>
+    <div class="mini-separator"></div>
     <p class="how-to-play-text">
       Para reproducir los enlaces Ace Stream en tu dispositivo necesitas tener
       instalado Ace Stream Media. Si no lo tienes instalado, puedes descargarlo
@@ -280,8 +283,7 @@
       para Android.
     </p>
 
-    <h3 style="color: white; margin: 0 20px 20px 29px">Android</h3>
-
+    <h4 style="color: white; margin: 0 20px 20px 29px">Android</h4>
     <p class="how-to-play-text">
       Para reproducir los enlaces en tu dispositivo móvil, una vez instalado Ace
       Stream, puedes abrir el enlace haciendo clic en él directamente, lo que
@@ -290,8 +292,7 @@
       texto "Enter content link".
     </p>
 
-    <h3 style="color: white; margin: 0 20px 20px 29px">Windows</h3>
-
+    <h4 style="color: white; margin: 0 20px 20px 29px">Windows</h4>
     <p class="how-to-play-text">
       Una vez instalado Ace Stream en Windows, tienes dos formas de reproducir
       los enlaces: la primera es copiar el enlace, abrir Ace Player manualmente
@@ -301,7 +302,8 @@
       esperar al anuncio para ver el contenido. <strong>Nota:</strong> Asegúrate
       de tener abierto Ace Stream Engine (ace_engine / Ace Stream HD), si no,
       ábrelo tú manualmente desde la ruta de instalación de Ace Stream
-      (C:\Users\<i>tuusuario</i>\AppData\Roaming\ACEStream\engine y abre
+      (C:\Users\<i>tuusuario</i>\AppData\Roaming
+      \ACEStream\engine y abre
       ace_engine.exe).
     </p>
 
