Agregar separador en la sección "OTRA WEB DE ENLACES"

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -186,6 +186,7 @@
 
   <div class="otra-web">
     <h2 style="color: white; text-align: center">OTRA WEB DE ENLACES</h2>
+    <div class="mini-separator"></div>
     <p>
       En el caso de que el enlace que busques no funcione, puedes probar en esta
       web:
