Refactor componente de agenda y mejorar la presentación de eventos deportivos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,7 @@
   <div class="scroll-to-links" *ngIf="isMobile">
     <button class="scroll-to-links-button" (click)="scrollToLinks()">
       <i class="bi bi-arrow-down-short" style="font-size: x-large"></i>
-      <span>Ir a los enlaces</span>
+      <span>Pulsa aquí para ir a los enlaces</span>
       <i class="bi bi-arrow-down-short" style="font-size: x-large"></i>
     </button>
   </div>
@@ -119,6 +119,10 @@
         ><sup><i class="bi bi-box-arrow-in-up-right"></i></sup></span
     ></a>
   </h4>
+
+  <div>
+    <app-agenda-evento-text></app-agenda-evento-text>
+  </div>
 
   <h3 class="header-enlaces">ENLACES</h3>
   <div class="mini-separator"></div>
