--- a/src/app/agenda-evento-text/agenda-evento-text.component.css
+++ b/src/app/agenda-evento-text/agenda-evento-text.component.css
@@ -1,14 +1,14 @@
-.agenda-text {
+.agenda-evento-text {
   display: flex;
   justify-content: center;
-  padding: 10px;
+  flex-direction: column;
   border: 2px solid #ccc;
   border-radius: 5px;
   color: white;
   font-size: 24px;
-  line-height: 1.5;
   text-align: center;
   flex-wrap: wrap;
+  margin-bottom: 1.5rem;
 }
 
 .agenda-text a {
@@ -26,4 +26,12 @@
   justify-content: center;
   color: white;
   font-size: 24px;
+}
+
+.mini-separator {
+  width: 50px;
+  height: 4px;
+  background: linear-gradient(90deg, #00bfff, #007acc);
+  margin: 0 auto 20px auto;
+  border-radius: 2px;
 }
