--- a/src/app/agenda-evento-text/agenda-evento-text.component.html
+++ b/src/app/agenda-evento-text/agenda-evento-text.component.html
@@ -1,8 +1,8 @@
 <div class="agenda-evento-text">
-  <h3 class="evento-text">CHAMPIONS LEAGUE</h3>
+  <h3 class="evento-text">EUROPA LEAGUE</h3>
   <div class="mini-separator"></div>
   <p class="agenda-text">
-    09/04 · 21:00h - <strong>Barça vs. Dortmund</strong>&nbsp;<i
+    10/04 · 21:00h - <strong>Rangers vs. Athletic</strong>&nbsp;<i
       class="bi bi-arrow-right"
     ></i
     >&nbsp;<a href="acestream://bb5a8bf7752e978460ee1710e5e8950a5c9e1f99">OPCIÓN 1</a> || <a href="acestream://0a26e20f39845e928411e09a124374fccb6e1478">OPCIÓN 2</a> ||
