--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,13 @@
   <nav class="navbar">
     <div class="navbar-container">
       <div class="navbar-logo">
-        <img src="balon.png" alt="Logo" class="logo" width="50" height="60" />
+        <img
+          src="images/balon.png"
+          alt="Logo"
+          class="logo"
+          width="50"
+          height="60"
+        />
       </div>
       <div class="navbar-title">
         <h1>ACE STREAM LINKS</h1>
@@ -303,8 +309,7 @@
       esperar al anuncio para ver el contenido. <strong>Nota:</strong> Asegúrate
       de tener abierto Ace Stream Engine (ace_engine / Ace Stream HD), si no,
       ábrelo tú manualmente desde la ruta de instalación de Ace Stream
-      (C:\Users\<i>tuusuario</i>\AppData\Roaming
-      \ACEStream\engine y abre
+      (C:\Users\<i>tuusuario</i>\AppData\Roaming \ACEStream\engine y abre
       ace_engine.exe).
     </p>
 
@@ -320,7 +325,78 @@
       <i class="bi bi-arrow-right"></i> "Vídeo" y en Desentrelazado selecciona
       "Automático" y Modo <i class="bi bi-arrow-right"></i> "Yadif (2x)".
     </p>
+
+    <h3 class="how-to-play-header">
+      ELIMINAR RETARDO DE EMISIÓN
+    </h3>
+    <div class="mini-separator"></div>
+
+    <p class="how-to-play-text">
+      Para evitar ver el contenido con retardo, es recomendable hacer esto en Ace Player:
+    </p>
+
+    <div class="popup-image-container">
+      <img
+        src="images/retardo_ace_stream.jpg"
+        alt="Example Image"
+        class="popup-image"
+        (click)="openImagePopup('images/retardo_ace_stream.jpg')"
+        title="Haz clic para ampliar"
+        style="cursor: pointer; width: 100%; max-width: 500px; display: block; margin: 0 auto;"
+      />
+    </div>
+
+    <div
+      class="image-popup"
+      *ngIf="isImagePopupOpen"
+      (click)="closeImagePopup()"
+      style="
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.8);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 1000;
+      "
+    >
+      <img
+      [src]="popupImageUrl"
+      alt="Popup Image"
+      style="max-width: 90%; max-height: 90%;"
+      />
+      <button
+      (click)="closeImagePopup()"
+      title="Cerrar imagen"
+      style="
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        background-color: #ff4d4d;
+        color: white;
+        border: none;
+        border-radius: 50%;
+        width: 30px;
+        height: 30px;
+        font-size: 18px;
+        font-weight: bold;
+        cursor: pointer;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        z-index: 1001;
+        transition: background-color 0.3s ease, transform 0.2s ease;
+      "
+      >
+      &times;
+      </button>
+    </div>
   </div>
+
   <div class="footer">
     <span class="footer-text">Ace Stream Links</span>
     <p class="footer-text">
