Actualizar fecha y equipos en el componente de agenda de eventos

--- a/src/app/agenda-evento-text/agenda-evento-text.component.html
+++ b/src/app/agenda-evento-text/agenda-evento-text.component.html
@@ -1,18 +1,19 @@
 <div class="agenda-evento-text">
   <h3 class="evento-text">CHAMPIONS LEAGUE</h3>
   <div class="mini-separator"></div>
-  16/04 · 21:00h
+  17/04 · 21:00h
   <span class="agenda-text">
-    <strong>Madrid vs. Arsenal</strong>&nbsp;<i class="bi bi-arrow-right"></i>
-    &nbsp;<a href="acestream://bb5a8bf7752e978460ee1710e5e8950a5c9e1f99">OPCIÓN 1</a> || <a href="acestream://0a26e20f39845e928411e09a124374fccb6e1478">OPCIÓN 2</a> ||
-    <a href="acestream://e572a5178ff72eed7d1d751a18b4b3419699f370">OPCIÓN 3</a> || <a href="acestream://9796f85036cb987fa21ef70e4b5e608e06f0c29d">OPCIÓN 4</a>
-  </span>
-  <span class="agenda-text">
-    <strong>Inter vs. Bayern</strong>&nbsp;<i class="bi bi-arrow-right"></i>
-    &nbsp;<a href="acestream://abdf9058786a48623d0de51a3adb414ae10b6e72">OPCIÓN 1</a> || <a href="acestream://deb8972491e3817ba2335662d7855d2c2c05a900">OPCIÓN 2</a>
-  </span>
-  <span class="agenda-text">
-    <strong>MULTICHAMPIONS</strong>&nbsp;<i class="bi bi-arrow-right"></i>
-    &nbsp;<a href="acestream://17b8bc4bf8e29547b0071c742e3d7da3bcbc484d">OPCIÓN 1</a> || <a href="acestream://3618edda333dad5374ac2c801f5f14483934b97d">OPCIÓN 2</a>
+    <strong>Athletic vs. Rangers</strong>&nbsp;<i class="bi bi-arrow-right"></i>
+    &nbsp;<a href="acestream://bb5a8bf7752e978460ee1710e5e8950a5c9e1f99"
+      >OPCIÓN 1</a
+    >
+    ||
+    <a href="acestream://b2a4d1eba9b46df5f52a87105df779f9d39abeb4">OPCIÓN 2</a>
+    ||
+    <a href="acestream://0a26e20f39845e928411e09a124374fccb6e1478">OPCIÓN 3</a>
+    ||
+    <a href="acestream://e572a5178ff72eed7d1d751a18b4b3419699f370">OPCIÓN 4</a>
+    ||
+    <a href="acestream://9796f85036cb987fa21ef70e4b5e608e06f0c29d">OPCIÓN 5</a>
   </span>
 </div>
