--- a/src/app/agenda-evento-text/agenda-evento-text.component.html
+++ b/src/app/agenda-evento-text/agenda-evento-text.component.html
@@ -1,5 +1,5 @@
 <div class="agenda-evento-text">
-  <h3 class="evento-text">CHAMPIONS LEAGUE</h3>
+  <h3 class="evento-text">EUROPA LEAGUE</h3>
   <div class="mini-separator"></div>
   17/04 · 21:00h
   <span class="agenda-text">
