Actualizar fecha y equipo en la sección de agenda deportiva

--- a/src/app/agenda-evento-text/agenda-evento-text.component.html
+++ b/src/app/agenda-evento-text/agenda-evento-text.component.html
@@ -1,9 +1,9 @@
 <div class="agenda-evento-text">
   <h3 class="evento-text">EUROPA LEAGUE</h3>
   <div class="mini-separator"></div>
-  17/04 · 21:00h
+  01/05 · 21:00h
   <span class="agenda-text">
-    <strong>Athletic vs. Rangers</strong>&nbsp;<i class="bi bi-arrow-right"></i>
+    <strong>Athletic vs. Man. United</strong>&nbsp;<i class="bi bi-arrow-right"></i>
     &nbsp;<a href="acestream://bb5a8bf7752e978460ee1710e5e8950a5c9e1f99"
       >OPCIÓN 1</a
     >
