--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -337,15 +337,29 @@ html {
 
 .links-container {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .column {
-  flex: 1;
-  margin-right: 10px;
+  flex: 1 1 calc(33.33% - 10px); /* Tres columnas en pantallas grandes */
+  margin: 5px;
 }
 
 .column:last-child {
   margin-right: 0;
+}
+
+@media (max-width: 768px) {
+  .column {
+    flex: 1 1 calc(50% - 10px); /* Dos columnas en pantallas medianas */
+  }
+}
+
+@media (max-width: 480px) {
+  .column {
+    flex: 1 1 calc(50% - 10px); /* Dos columnas en pantallas pequeñas */
+  }
 }
 
 .iframe-container {
