Actualizar fecha y equipos en la sección de agenda de eventos

--- a/src/app/agenda-evento-text/agenda-evento-text.component.html
+++ b/src/app/agenda-evento-text/agenda-evento-text.component.html
@@ -1,9 +1,9 @@
 <div class="agenda-evento-text">
   <h3 class="evento-text">EUROPA LEAGUE</h3>
   <div class="mini-separator"></div>
-  01/05 · 21:00h
+  08/05 · 21:00h
   <span class="agenda-text">
-    <strong>Athletic vs. Man. United</strong>&nbsp;<i class="bi bi-arrow-right"></i>
+    <strong>Man Utd vs. Athletic</strong>&nbsp;<i class="bi bi-arrow-right"></i>
     &nbsp;<a href="acestream://0a26e20f39845e928411e09a124374fccb6e1478"
       >OPCIÓN 1</a
     >
@@ -16,4 +16,5 @@
     ||
     <a href="acestream://9796f85036cb987fa21ef70e4b5e608e06f0c29d">OPCIÓN 5</a>
   </span>
+  <div style="display: block; margin-bottom: 1.1rem;">¿Se remonta?</div>
 </div>
