--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -222,7 +222,7 @@
         target="_blank"
         >Play Store</a
       >
-      para Android.
+      para Android. No se puede instalar Ace Stream en dispositivos iOS.
     </p>
 
     <h4 style="color: white; margin: 0 20px 20px 29px">Android</h4>
