Eliminar el componente AgendaEventoText de la plantilla y del módulo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -117,10 +117,10 @@
     </div>
   </div>
 
-  <div>
+<!--   <div>
     <app-agenda-evento-text></app-agenda-evento-text>
   </div>
-
+ -->
   <h4 class="text-enlaces-agenda-completa">
     Para ver la agenda completa, visita la web de&nbsp;
     <a href="https://www.futbolenlatv.es/" class="link-futboltv" target="_blank"
