Eliminar el componente iframe de la agenda de eventos -> Champions League

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -51,7 +51,7 @@
         (load)="onIframeLoad(0)"
       ></iframe>
     </div>
-    <div class="iframe-container">
+    <!-- <div class="iframe-container">
       <div class="spinner-container" *ngIf="loading[1]">
         <mat-spinner diameter="78"></mat-spinner>
       </div>
@@ -66,7 +66,7 @@
         style="margin-bottom: 10px"
         (load)="onIframeLoad(1)"
       ></iframe>
-    </div>
+    </div> -->
     <div class="iframe-container">
       <div class="spinner-container" *ngIf="loading[2]">
         <mat-spinner diameter="78"></mat-spinner>
