Actualizar mensaje de error para la búsqueda de canales en la sección de enlaces

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -155,8 +155,8 @@
     </form>
   </div>
   <p class="no-encontrado-text" *ngIf="filteredLinks.length === 0">
-    <i class="bi bi-exclamation-triangle-fill"></i>&nbsp; No se encontraron
-    canales.
+    <i class="bi bi-exclamation-triangle-fill"></i>&nbsp; No se encontro ningún
+    canal.
   </p>
   <div class="links-container" *ngIf="filteredLinks.length > 0">
     <div class="column" *ngFor="let column of [0, 1, 2]">
