--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
     </div>
   </nav>
 
-  <div class="info-message-responsive">
+  <div class="info-message-responsive" *ngIf="!location.href.includes('vercel.app')">
     <div class="info-message-row">
       <i class="bi bi-info-circle-fill" style="margin-top: 2px; margin-right: 6px;"></i>
       <span class="info-message-text">
