--- a/src/app/agenda-evento-text/agenda-evento-text.component.html
+++ b/src/app/agenda-evento-text/agenda-evento-text.component.html
@@ -1,23 +1,18 @@
 <div class="agenda-evento-text">
-  <h3 class="evento-text">EL CLÁSICO</h3>
+  <h3 class="evento-text">FINAL EUROPA LEAGUE</h3>
   <div class="mini-separator"></div>
-  11/05 · 16:15 h
+  20/05 · 21:00h
   <span class="agenda-text">
-    <strong>FC Palancas - Real Mandril</strong>&nbsp;<i class="bi bi-arrow-right"></i>
-    &nbsp;<a href="acestream://6d05b31e5e8fdae312fbd57897363a7b10ddb163"
-      >OPCIÓN 1</a
-    >
+    <strong>Tottenham vs. Man Utd</strong>&nbsp;<i class="bi bi-arrow-right"></i>
+    &nbsp;<a href="acestream://0a26e20f39845e928411e09a124374fccb6e1478"
+      >OPCIÓN 1</a>
     ||
-    <a href="acestream://d3de78aebe544611a2347f54d5796bd87f16c92d">OPCIÓN 2</a>
+    <a href="acestream://bb5a8bf7752e978460ee1710e5e8950a5c9e1f99">OPCIÓN 2</a>
     ||
-    <a href="acestream://cc9b7f5fe416069a2110da0909b0f915043c468b">OPCIÓN 3</a>
+    <a href="acestream://e572a5178ff72eed7d1d751a18b4b3419699f370">OPCIÓN 3</a>
     ||
-    <a href="acestream://94d34491106e00394835c8cb68aa94481339b53f">OPCIÓN 4</a>
+    <a href="acestream://b2a4d1eba9b46df5f52a87105df779f9d39abeb4">OPCIÓN 4</a>
     ||
-    <a href="acestream://1969c27658d4c8333ab2c0670802546121a774a5">OPCIÓN 5</a>
-    ||
-    <a href="acestream://1bc437bce57b4b0450f6d1f8d818b7e97000745e">OPCIÓN 6</a>
-    ||
-    <a href="acestream://608b0faf7d3d25f6fe5dba13d5e4b4142949990e">OPCIÓN 7</a>
+    <a href="acestream://56ac8e227d526e722624675ccdd91b0cc850582f">OPCIÓN 5</a>
   </span>
 </div>
