Comentar sección del iframe en el componente de agenda deportiva

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -86,7 +86,7 @@
         (load)="onIframeLoad(1)"
       ></iframe>
     </div> -->
-    <div class="iframe-container">
+<!--     <div class="iframe-container">
       <div class="spinner-container" *ngIf="loading[2]">
         <mat-spinner diameter="78"></mat-spinner>
       </div>
@@ -101,7 +101,7 @@
         style="margin-bottom: 10px"
         (load)="onIframeLoad(2)"
       ></iframe>
-    </div>
+    </div> -->
     <div class="iframe-container">
       <div class="spinner-container" *ngIf="loading[3]">
         <mat-spinner diameter="78"></mat-spinner>
