--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,20 +25,26 @@
     </div>
   </nav>
 
-  <div class="info-message-responsive" *ngIf="!location.href.includes('vercel.app')">
+  <div
+    class="info-message-responsive"
+    *ngIf="!location.href.includes('vercel.app')"
+  >
     <div class="info-message-row">
-      <i class="bi bi-info-circle-fill" style="margin-top: 2px; margin-right: 6px;"></i>
+      <i
+        class="bi bi-info-circle-fill"
+        style="margin-top: 2px; margin-right: 6px"
+      ></i>
       <span class="info-message-text">
         Debido a los bloqueos de LALIGA a ciertas IPs de Cloudflare, es posible
         que no puedas acceder a esta web en ciertos momentos. Para evitarlos,
-        puedes usar una VPN. Como alternativa puedes
-        acceder a través de este otro enlace:
+        puedes usar una VPN. Como alternativa puedes acceder a través de este
+        otro enlace:
       </span>
       <a
         class="link-futboltv"
         href="https://markel-links.vercel.app/"
         target="_blank"
-        style="margin-left: 8px; white-space: nowrap;"
+        style="margin-left: 8px; white-space: nowrap"
         >HAZ CLIC PARA ACCEDER</a
       >
     </div>
@@ -51,7 +57,7 @@
       <i class="bi bi-arrow-down-short" style="font-size: x-large"></i>
     </button>
   </div>
-  <h3 class="agenda-header">AGENDA DEPORTIVA</h3>
+  <!-- <h3 class="agenda-header">AGENDA DEPORTIVA</h3>
   <div class="mini-separator"></div>
   <div class="futbol-tv-agendas">
     <div class="iframe-container">
@@ -70,7 +76,7 @@
         (load)="onIframeLoad(0)"
       ></iframe>
     </div>
-    <!-- <div class="iframe-container">
+    <div class="iframe-container">
       <div class="spinner-container" *ngIf="loading[1]">
         <mat-spinner diameter="78"></mat-spinner>
       </div>
@@ -85,8 +91,8 @@
         style="margin-bottom: 10px"
         (load)="onIframeLoad(1)"
       ></iframe>
-    </div> -->
-<!--     <div class="iframe-container">
+    </div>
+    <div class="iframe-container">
       <div class="spinner-container" *ngIf="loading[2]">
         <mat-spinner diameter="78"></mat-spinner>
       </div>
@@ -101,7 +107,7 @@
         style="margin-bottom: 10px"
         (load)="onIframeLoad(2)"
       ></iframe>
-    </div> -->
+    </div>
     <div class="iframe-container">
       <div class="spinner-container" *ngIf="loading[3]">
         <mat-spinner diameter="78"></mat-spinner>
@@ -134,14 +140,14 @@
         (load)="onIframeLoad(4)"
       ></iframe>
     </div>
-  </div>
+  </div> -->
 
-   <!-- <div>
+  <!-- <div>
     <app-agenda-evento-text></app-agenda-evento-text>
   </div> -->
 
   <h4 class="text-enlaces-agenda-completa">
-    Para ver la agenda completa, visita la web de&nbsp;
+    Para ver la agenda deportiva<!--completa-->, visita la web de&nbsp;
     <a href="https://www.futbolenlatv.es/" class="link-futboltv" target="_blank"
       >Fútbol en la TV
       <span style="vertical-align: middle"
