Actualizar información de Roland Garros en el componente de agenda y descomentar sección en la vista principal

--- a/src/app/agenda-evento-text/agenda-evento-text.component.html
+++ b/src/app/agenda-evento-text/agenda-evento-text.component.html
@@ -1,18 +1,14 @@
 <div class="agenda-evento-text">
-  <h3 class="evento-text">FINAL EUROPA LEAGUE</h3>
+  <h3 class="evento-text">ROLAND GARROS · TENIS</h3>
   <div class="mini-separator"></div>
-  20/05 · 21:00h
   <span class="agenda-text">
-    <strong>Tottenham vs. Man Utd</strong>&nbsp;<i class="bi bi-arrow-right"></i>
-    &nbsp;<a href="acestream://0a26e20f39845e928411e09a124374fccb6e1478"
-      >OPCIÓN 1</a>
+    <strong>Del 19 de mayo al 8 de junio</strong
+    ><!-- <i class="bi bi-arrow-right"></i> -->
+    &nbsp;
+  </span>
+  <span class="agenda-text">
+    <a href="acestream://714e14e6d6e27660fd25a75b57b0ac5580fe705d">EUROSPORT 1</a>
     ||
-    <a href="acestream://bb5a8bf7752e978460ee1710e5e8950a5c9e1f99">OPCIÓN 2</a>
-    ||
-    <a href="acestream://e572a5178ff72eed7d1d751a18b4b3419699f370">OPCIÓN 3</a>
-    ||
-    <a href="acestream://b2a4d1eba9b46df5f52a87105df779f9d39abeb4">OPCIÓN 4</a>
-    ||
-    <a href="acestream://56ac8e227d526e722624675ccdd91b0cc850582f">OPCIÓN 5</a>
+    <a href="acestream://dc4ccb9e72550bc72be9360aa7d77e337ad11ecc">EUROSPORT 2</a>
   </span>
 </div>
