Mejorar el mensaje sobre la instalación de Ace Stream en iOS y agregar un ícono de advertencia.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -247,7 +247,9 @@
         target="_blank"
         >Play Store</a
       >
-      para Android. No se puede instalar Ace Stream en dispositivos iOS.
+      para Android.  
+      <i class="bi bi-exclamation-triangle-fill" style="color: #ffc107; margin-right: 5px; vertical-align: middle;"></i>
+      <strong>No se puede instalar Ace Stream en dispositivos con iOS (Apple)</strong>.
     </p>
 
     <h4 style="color: white; margin: 0 20px 20px 29px">Android</h4>
